fix bottom bloc spacing

--- a/src/styles/FC90.css
+++ b/src/styles/FC90.css
@@ -151,6 +151,8 @@ article strong {
 
   display: flex;
   justify-content: space-between;
+  position: absolute;
+  bottom: 12px;
 }
 
 #bottom-left {
